Bug 992218 - Don't flag texture clients for reuse if they're actually still being used. r=nical a=lsblakk